Fix small recaptcha flickering issue

--- a/src/app/shared/components/recaptcha-control/recaptcha-control.component.scss
+++ b/src/app/shared/components/recaptcha-control/recaptcha-control.component.scss
@@ -1,3 +1,5 @@
 :host {
   display: block;
+  min-width: 304px;
+  min-height: 78px;
 }
